[package]
name        = "latch"
version     = "0.0.0"
description = "Latch is a low level democore system."
license     = "MIT"
authors     = ["Mahmut Bulut <vertexclique@gmail.com>"]
homepage    = "https://github.com/vertexclique"

[dependencies]
embedded-graphics = "0.6.0"
embedded-graphics-simulator = "0.2.0"

[profile.release]
panic = "abort"
lto = true
codegen-units = 1
incremental = false
opt-level = "z"

[profile.dev]
panic = "abort"
lto = true
codegen-units = 1
incremental = false
opt-level = "z"